Use UpdateSettingsStep rather than a new step type
Pull conditional branch from the AllowWriteStep type up into
the shrink action. This allows removing the AllowWriteStep type
and using UpdateSettingsStep directly